# logging_support

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: example_usage.py
examples/mypackage/: __init__.py
logging_support/: __init__.py  logger.py
tests/: test_logger.py
